--- a/Runtime/Kesomannen.FlowTween.asmdef
+++ b/Runtime/Kesomannen.FlowTween.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Kesomannen.FlowTween",
-    "rootNamespace": "",
+    "rootNamespace": "FlowTween",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
